<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/layout_headerbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvEmtyData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_task"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/sp_15"/>

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <include layout="@layout/layout_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

        <com.terramaster.widget.MyTextView
            android:id="@+id/tvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_3"
            android:drawableTop="@drawable/ic_round_home"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/sp_10">
        </com.terramaster.widget.MyTextView>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.terramaster.widget.MyTextView
            android:id="@+id/tvPauseAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_3"
            android:drawableTop="@drawable/ic_round_pause"
            android:gravity="center"
            android:text="@string/pause_all"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/sp_10">
        </com.terramaster.widget.MyTextView>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.terramaster.widget.MyTextView
            android:id="@+id/tvRecoverAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_3"
            android:drawableTop="@drawable/ic_round_recover"
            android:gravity="center"
            android:text="@string/recovery_all"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/sp_10">
        </com.terramaster.widget.MyTextView>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.terramaster.widget.MyTextView
            android:id="@+id/tvDeleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_3"
            android:drawableTop="@drawable/ic_round_delete_all"
            android:gravity="center"
            android:text="@string/delete_all"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/sp_10">
        </com.terramaster.widget.MyTextView>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
    </LinearLayout>

</LinearLayout>