<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/mainBg"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <include layout="@layout/layout_headerbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <com.terramaster.widget.MyTextView
            android:id="@+id/tvDiscoverStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/dp_18"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"/>

        <ImageView
            android:id="@+id/ivDiscoverMain"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:scaleType="center"
            android:src="@drawable/discover_selector"/>

        <TableLayout
            android:id="@+id/tlTerraDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.terramaster.widget.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/dp_18"/>

                <Spinner
                    android:id="@+id/spinTerraDevice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/ivDiscover"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:scaleType="center"
                    android:src="@drawable/discover_selector"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical">

                <com.terramaster.widget.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/dp_18"/>

                <com.terramaster.widget.MyTextView
                    android:id="@+id/tvIP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="-"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/dp_18"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical">

                <com.terramaster.widget.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mac"
                    android:textColor="@color/text_color_grey"
                    android:textSize="@dimen/dp_18"/>

                <com.terramaster.widget.MyTextView
                    android:id="@+id/tvMAC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="-"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/dp_18"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <com.terramaster.widget.MyEditText
            android:id="@+id/edtUsername"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/username"
            android:inputType="text"
            android:singleLine="true"/>

        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtUsername"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <com.terramaster.widget.MyEditText
                android:id="@+id/edtPassword"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:password="true"
                android:singleLine="true"/>

            <com.terramaster.widget.MyButton
                android:id="@+id/btnDisplayPassword"
                style="@style/GreyorderButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/display_password"/>
        </LinearLayout>

        <com.terramaster.widget.MyButton
            android:id="@+id/btnRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llPassword"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:drawableLeft="@drawable/check_box"
            android:drawablePadding="@dimen/dp_10"
            android:minHeight="0dp"
            android:singleLine="true"
            android:text="@string/remember_me"
            android:textAllCaps="false"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/dp_18"/>

        <com.terramaster.widget.MyButton
            android:id="@+id/btnLogin"
            style="@style/GreenButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRememberMe"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/login"/>
    </RelativeLayout>

</LinearLayout>