<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/dialog_bg"
              android:orientation="vertical">

    <com.terramaster.widget.MyTextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_25"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:text="Title"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp_20"/>


    <com.terramaster.widget.MyButton
        android:id="@+id/btnPositive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/red_button"
        android:text="@string/yes"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp_18"
        android:visibility="gone"/>

    <com.terramaster.widget.MyButton
        android:id="@+id/btnNeutral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/white_button"
        android:text="@string/ok"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp_18"
        android:visibility="gone"/>


    <com.terramaster.widget.MyButton
        android:id="@+id/btnNegative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/white_button"
        android:text="@string/no"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp_18"
        android:visibility="gone"/>

</LinearLayout>